--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
               </div> -->
               <div class="column">
                 <p class="mb-5">
-                  <a class="btn btn-large btn-light" href="" role="button" target="_blank">
+                  <a class="btn btn-large btn-light" href="https://arxiv.org/abs/2510.01669" role="button" target="_blank">
                     <i class="ai ai-arxiv"></i>
                     <b>Paper</b>
                   </a>
@@ -484,13 +484,16 @@
         <hr style="margin-top: 0px" />
         <pre style="background-color: #e9eeef; padding: 1.5em 1.5em; border-radius: 20px; font-size: 0.75em;">
 <code>
-  <!-- @inproceedings{wang2025freetimegs,
-  author  = {Wang, Yifan and Yang, Peishan and Xu, Zhen and Sun, Jiaming and Zhang, Zhanhua and Chen, Yong and Bao, Hujun and Peng, Sida and Zhou, Xiaowei},
-  title   = {FreeTimeGS: Free Gaussian Primitives at Anytime Anywhere for Dynamic Scene Reconstruction},
-  booktitle = {CVPR},
-  year    = {2025},
-  url     = {https://zju3dv.github.io/freetimegs}
-} -->
+
+@misc{cao2025universeunleashingsceneprior,
+  title={UniVerse: Unleashing the Scene Prior of Video Diffusion Models for Robust Radiance Field Reconstruction}, 
+  author={Jin Cao and Hongrui Wu and Ziyong Feng and Hujun Bao and Xiaowei Zhou and Sida Peng},
+  year={2025},
+  eprint={2510.01669},
+  archivePrefix={arXiv},
+  primaryClass={cs.CV},
+  url={https://arxiv.org/abs/2510.01669}, 
+}
 </code></pre>
         <hr />
       </div>
